2007-05-26  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Add info about "s3cmd du" command.

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.3
	  ----------------------

2007-05-26  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Patch from Basil Shubin <basil.shubin@gmail.com>
	  adding support for "s3cmd du" command.
	* s3cmd: Modified output format of "s3cmd du" to conform
	  with unix "du".
	* setup.cfg: Require Python 2.5 in RPM. Otherwise it needs
	  to require additional python modules (e.g. ElementTree)
	  which may have different names in different distros. It's 
	  indeed still possible to manually install s3cmd with 
	  Python 2.4 and appropriate modules.

2007-04-09  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.2
	  ----------------------

2007-04-09  Michal Ludvig  <michal@logix.cz>

	* s3cmd.1: Added manpage
	* Updated infrastructure files to create "better"
	  distribution archives.

2007-03-26  Michal Ludvig  <michal@logix.cz>

	* setup.py, S3/PkgInfo.py: Move package info out of setup.py
	* s3cmd: new parameter --version
	* s3cmd, S3/S3Uri.py: Output public HTTP URL for objects
	  stored with Public ACL.
	  
2007-02-28  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Verify supplied accesskey and secretkey
	  in interactive configuration path.
	* S3/Config.py: Hide access key and secret key
	  from debug output.
	* S3/S3.py: Modify S3Error exception to work
	  in python 2.4 (=> don't expect Exception is
	  a new-style class).
	* s3cmd: Updated for the above change.

2007-02-19  Michal Ludvig  <michal@logix.cz>

	* NEWS, INSTALL, README, setup.py: Added
	  more documentation.

2007-02-19  Michal Ludvig  <michal@logix.cz>

	* S3/S3.py, s3cmd: New feature - allow "get" to stdout

2007-02-19  Michal Ludvig  <michal@logix.cz>

	* S3/S3fs.py: Removed (development moved to branch s3fs-devel).

2007-02-08  Michal Ludvig  <michal@logix.cz>

	* S3/S3fs.py: 
	  - Implemented mknod()
	  - Can create directory structure